made up arrow smaller and fixed spacing

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -1,7 +1,10 @@
 #image-question-container {
   padding-top: 20px;
 }
-
+.up-arrow {
+  position: relative;
+  bottom: 3px;
+}
 .tag {
   z-index: 1500;
   position: absolute;
